--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "dantekillstorm-portfolio",
   "version": "1.0.0",
+  "homepage": "https://YOUR_GITHUB_USERNAME.github.io/DantePortFolio",
   "description": "Modern portfolio website for photographer and videographer DANTEKILLSTORM",
   "author": "DANTEKILLSTORM",
-  "keywords": ["photography", "videography", "portfolio", "react", "firebase"],
+  "keywords": [
+    "photography",
+    "videography",
+    "portfolio",
+    "react",
+    "firebase"
+  ],
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "cloudinary": "^2.8.0",
     "firebase": "^12.6.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.561.0",
@@ -19,9 +27,14 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
